--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     /* --- NOISE EFFECTS --- */
     .tv-noise {
       position: fixed;
-      top: 0; left: 0; width: 100vw; height: 100vh;
+      top: 0; left: 0; width: 100vw; height: 100%;
       pointer-events: none;
       z-index: 9998;
       opacity: 0.08;
